[gd_scene load_steps=21 format=3 uid="uid://c58iq3wgcd4xj"]

[ext_resource type="Script" path="res://Enemies/GoatHead/GoatHead.gd" id="1_05l85"]
[ext_resource type="Shader" path="res://Enemies/damage_flash.gdshader" id="2_nb5vq"]
[ext_resource type="Texture2D" uid="uid://w6vysha5tlnr" path="res://Assets/sprites/Enemies/goatmove/goatmove_0000.png" id="3_kx33i"]
[ext_resource type="Texture2D" uid="uid://bikyiysvfv5l" path="res://Assets/sprites/Enemies/goatmove/goatmove_0001.png" id="4_2ma0u"]
[ext_resource type="Texture2D" uid="uid://b00lnc7dwaug4" path="res://Assets/sprites/Enemies/goatmove/goatmove_0002.png" id="5_4oj05"]
[ext_resource type="Texture2D" uid="uid://ctsahlqqm14d3" path="res://Assets/sprites/Enemies/goatmove/goatmove_0003.png" id="6_bh850"]
[ext_resource type="Texture2D" uid="uid://i0wo5ju45fic" path="res://Assets/sprites/Enemies/goatmove/goatmove_0004.png" id="7_wdaq8"]
[ext_resource type="Texture2D" uid="uid://dn5u6cvnawdh0" path="res://Assets/sprites/Enemies/goatmove/goatmove_0005.png" id="8_1m5ut"]
[ext_resource type="Texture2D" uid="uid://b8nkwwto47smi" path="res://Assets/sprites/Enemies/goatmove/goatmove_0006.png" id="9_ivrx4"]
[ext_resource type="Script" path="res://Enemies/GoatHead/goat_head_sfx.gd" id="9_udvvi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_teiet"]
radius = 312.41

[sub_resource type="CircleShape2D" id="CircleShape2D_p3feb"]
radius = 24.0208

[sub_resource type="CircleShape2D" id="CircleShape2D_r7jp3"]
radius = 18.0278

[sub_resource type="ShaderMaterial" id="ShaderMaterial_snaq8"]
resource_local_to_scene = true
shader = ExtResource("2_nb5vq")
shader_parameter/flash_color = Color(1, 0, 0.0166664, 1)
shader_parameter/flash_value = null

[sub_resource type="SpriteFrames" id="SpriteFrames_shqao"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kx33i")
}, {
"duration": 1.0,
"texture": ExtResource("4_2ma0u")
}, {
"duration": 1.0,
"texture": ExtResource("5_4oj05")
}, {
"duration": 1.0,
"texture": ExtResource("6_bh850")
}, {
"duration": 1.0,
"texture": ExtResource("7_wdaq8")
}, {
"duration": 1.0,
"texture": ExtResource("8_1m5ut")
}, {
"duration": 1.0,
"texture": ExtResource("9_ivrx4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_d6ngj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="Animation" id="Animation_y5208"]
resource_name = "flash"
length = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.000221509, 0.0293614),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f8dil"]
_data = {
"RESET": SubResource("Animation_d6ngj"),
"flash": SubResource("Animation_y5208")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrcvs"]
bg_color = Color(0.469605, 0.190438, 0.214815, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5rsa"]
bg_color = Color(0.830492, 0.2944, 0.31053, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="GoatHead" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_05l85")

[node name="SenseArea" type="Area2D" parent="."]
collision_mask = 3

[node name="SenseCollision" type="CollisionShape2D" parent="SenseArea"]
shape = SubResource("CircleShape2D_teiet")

[node name="HitArea" type="Area2D" parent="."]
collision_mask = 3

[node name="HitCollision" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_p3feb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r7jp3")

[node name="Blood_Timer" type="Timer" parent="."]
autostart = true

[node name="GoatSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_snaq8")
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_shqao")
frame = 6
frame_progress = 0.753259

[node name="FlashAnimation" type="AnimationPlayer" parent="GoatSprite"]
libraries = {
"": SubResource("AnimationLibrary_f8dil")
}

[node name="HpBar" type="ProgressBar" parent="."]
offset_left = -28.0
offset_top = -38.0
offset_right = 82.0
offset_bottom = -19.0
scale = Vector2(0.5, 0.5)
theme_override_styles/background = SubResource("StyleBoxFlat_lrcvs")
theme_override_styles/fill = SubResource("StyleBoxFlat_u5rsa")
value = 20.0
show_percentage = false

[node name="GoatHeadSfx" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
max_distance = 1000.0
script = ExtResource("9_udvvi")

[connection signal="body_entered" from="SenseArea" to="." method="_on_sense_area_body_entered"]
[connection signal="body_exited" from="SenseArea" to="." method="_on_sense_area_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_hit_area_body_exited"]
[connection signal="timeout" from="Blood_Timer" to="." method="_on_timer_timeout"]
